tests/golden/compile-pass/blank_line_preservation.rua
fn total() -> i64 {
    let left = 1;

    let right = 2;

    left + right
}

let value = total();
print("{}", value);

let doubled = value * 2;
print("{}", doubled);
