tests/golden/compile-fail/type_membership_element_mismatch.rua
fn invalid() -> bool {
    "two" in [1, 2, 3]
}
